--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=BenchNine:700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+@import url(https://fonts.googleapis.com/css?family=Montserrat&display=swap);
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #9bc5de;
+}
 
 .App {
   width: 100%;
@@ -7,33 +18,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.text {
-  width: 500px;
-  height: 1500px;
+  color: #585858;
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   width: 100%;
   height: 1000px;
 }
 
 .headerimg {
+  z-index: 3;
   width: 100%;
   position: absolute;
   height: 1000px;
-  /* background-image: url(./assets/desk.svg);
-  background-position: top center;
-  background-attachment: fixed;
-  background-size: auto 700px;
-  background-repeat: no-repeat; */
   -webkit-clip-path: polygon(
     7% 10%,
     53% 10%,
@@ -54,7 +53,7 @@
     23% 31%,
     7% 31%
   );
-  background-color: #9bc5de;
+  background-color: #fff;
 }
 
 .headerimg .image-1 {
@@ -132,24 +131,24 @@ header {
 .word {
   display: block;
   text-align: justify;
-  font-family: "BenchNine";
+  font-family: "montserrat";
   line-height: 0.8;
   text-transform: uppercase;
   letter-spacing: 0px;
-  font-size: 80pt;
+  font-size: 60pt;
   transform: translateX(200%);
 }
 
 .word1 {
   animation: slide-in-left 1s forwards;
   -webkit-animation: slide-in-left 1s forwards;
-  color: #9bc5de;
+  color: #fff;
 }
 
 .word2 {
   animation: slide-in-left 1.2s forwards;
   -webkit-animation: slide-in-left 1.2s forwards;
-  color: #9bc5de;
+  color: #fff;
 }
 
 .word3 {
@@ -161,17 +160,192 @@ header {
 .wrapper {
   margin: 50px auto;
   position: absolute;
-  right: 150px;
-  top: 200px;
+  right: 250px;
+  top: 335px;
+}
+
+.imagebetween {
+  margin-right: 50px;
+  transform: rotate(20deg);
+  width: 150px;
+  height: 150px;
 }
 
 .about {
-  text-align: center;
-  font-family: "BenchNine";
+  -webkit-clip-path: polygon(0 7%, 100% 0%, 100% 100%, 0 94%);
+  clip-path: polygon(0 7%, 100% 0%, 100% 100%, 0 94%);
+  z-index: 3;
+  position: relative;
+  background-color: #fff;
+}
+
+.about h1 {
+  font-family: "montserrat";
+  font-size: 40pt;
+  color: #9bc5de;
+}
+
+.about img {
+  margin-right: 20px;
+  float: right;
+}
+
+.text {
+  margin-bottom: 25px !important;
+}
+
+.about p {
+  font-family: "montserrat";
+  font-weight: 350;
+  margin-right: 35%;
+  font-size: 20pt;
+  color: #585858;
+}
+
+.skilltitle h3 {
+  margin-left: 140px;
+  text-align: right;
+  font-family: "montserrat";
+  font-size: 40pt;
+  color: #9bc5de;
+  margin-right: 20px;
+}
+
+.skilltitle p {
+  margin-left: 420px;
+  text-align: right;
+  font-family: "montserrat";
+  font-size: 20pt;
+  color: #585858;
+  margin-right: 20px;
+}
+
+.me {
+  margin-top: 100px !important;
+}
+
+.skillbar {
+  width: 70% !important;
+  font-family: "montserrat";
+}
+
+.skillbar-title span {
+  padding: 0 10px !important;
+}
+
+.skills {
+  margin-bottom: 100px !important;
+}
+
+.skill {
+  margin-top: 25px;
+}
+
+.projects {
+  width: 80%;
+  margin-bottom: 100px;
+}
+
+.projects h3 {
+  font-family: "montserrat";
   font-size: 60pt;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.projects body1 {
+  font-family: "montserrat";
+  font-size: 20pt;
+  color: #585858;
+  margin-bottom: 10px;
+}
+
+.projects button {
+  padding-right: 5%;
+  padding-left: 5%;
+  border-width: 3px;
+  border-color: #fff;
+  border-radius: 0%;
+  font-size: 20pt;
+  margin-top: 20px;
+  display: block;
+  color: #fff;
+  font-family: "montserrat";
+}
+
+.wrapper button {
+  animation: slide-in-left 1s forwards;
+  -webkit-animation: slide-in-left 1s forwards;
+  transform: translateX(200%);
+  border-color: #fff;
+  padding-right: 5%;
+  padding-left: 5%;
+  border-width: 3px;
+  border-radius: 0%;
+  font-size: 20pt;
+  margin-top: 20px;
+  display: block;
+  color: #fff;
+  font-family: "montserrat";
+}
+
+.project {
+  margin-top: 100px !important;
+}
+
+.footer {
+  -webkit-clip-path: polygon(0 24%, 100% 0%, 100% 100%, 0 100%);
+  clip-path: polygon(0 24%, 100% 0%, 100% 100%, 0 100%);
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.footercontent {
+  margin-top: 100px !important;
+  margin: auto;
+  width: 80%;
+}
+
+.footer h5 {
+  font-family: "montserrat";
+  font-size: 20pt;
+}
+
+.footer a {
+  color: #585858;
+  text-decoration: none;
+  font-family: "montserrat";
+  font-size: 12pt;
+  padding: 10px;
+}
+
+.footer ul {
+  padding: 0;
+}
+
+.footer li {
+  list-style: none;
+  padding: 5px;
+}
+
+.footer a:hover {
+  color: black;
+}
+
+.footer .copyright {
+  float: right;
+  font-family: "montserrat";
 }
 
 @keyframes slide-in-left {
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slide-in-right {
   100% {
     transform: translateX(0%);
   }
